[package]
name = "translating-symbolic"
version = "0.1.1"
description = "A program to translate symbolic sequences from a circle map with two branches to a circle map that is the first map repeated twice. Refer README."
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
repository = "https://github.com/cloudsftp/translating-symbolic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
iter_tools = "0.1.4"
